Kinda fix tables on mobile

--- a/www/assets/style-white.css
+++ b/www/assets/style-white.css
@@ -138,6 +138,7 @@ body {
 .content table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 .content table th,
