--- a/www/assets/style.css
+++ b/www/assets/style.css
@@ -141,6 +141,7 @@ body {
 .content table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 .content table th,
